--- a/mc_toc.Rmd
+++ b/mc_toc.Rmd
@@ -19,6 +19,16 @@ data: `r data`
     position: relative;
     right: 0px;
 }
+
+p.comment {
+background-color: #DBDBDB;
+padding: 10px;
+border: 1px solid black;
+margin-left: 25px;
+border-radius: 5px;
+font-style: italic;
+}
+
 </style>
 
 ```{r}
@@ -31,8 +41,9 @@ Question bank {data-orientation=rows}
 
 Row {data-height=10}
 -----------------------------------------------------------------------
-Morning Consult is a reputable survey company that is very active in polling the U.S. about current events, trending stories, and politics. The company also frequently releases crosstabs of its survey results, which are being collected at [this link](https://gsp.box.com/s/fccjza13q11539vx4x2h8cjdh9lrpg9l){target='_blank'}.<br/><br/>Below is a running list of questions asked by Morning Consult. Keywords from the questions have been split out and all columns are searchable. If there is a question of interest, simply click the link above and download the pdf file that matches the "Survey Number" in the table below. Additionally, if the survey was referenced in an article on Morning Consult, a link is provided (it's possible that some links may be dead). <br/><br/>
- 
+<p class="comment">
+Morning Consult is a reputable survey company that is very active in polling the U.S. about current events, trending stories, and politics. The company also frequently releases crosstabs of its survey results, which are being collected at [this link](https://gsp.box.com/s/fccjza13q11539vx4x2h8cjdh9lrpg9l){target='_blank'}.<br/><br/>Below is a running list of questions asked by Morning Consult. All columns are searchable. If there is a question of interest, simply click the link above and download the pdf file that matches the "Survey Number" in the table below. Additionally, if the survey was referenced in an article on Morning Consult, a link is provided to give additional context (it's possible that some links may be dead). <br/><br/>
+</p>
 Row 
 -----------------------------------------------------------------------
 
@@ -49,7 +60,7 @@ df %>%
     `Survey Date` = survey_date,
     `Survey Number` = filenumber,
     `Sample Pop` = sample,
-    Keywords = keywords,
+    # Keywords = keywords,
     `Question ID` = V1,
     Question = question) %>%
   DT::datatable(fillContainer = FALSE, filter = 'top',
